syntax = "proto3";

package greeter.srv;

option go_package = "proto/greeter";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the file's information.
message DownloadFileRequest {
  string clientName = 1;
  string fileName = 2;
  string filePath = 3;
}

// The request message containing the file.
message DownloadFileReply {
  FileStatus fileStatus = 1;
  bytes filePart = 2;
  int32 process = 3;
  int32 total = 4;
}

enum FileStatus {
  FILE_SUCCESS = 0;
  FILE_NOT_FOUND = 1;
  FILE_CAN_NOT_READ = 2;
  FILE_TRANSPORT_FORBIDDEN = 3;
  UNKNOWN_STATUS = 99;
}